[tool.poetry]
name = "unit-testing-basic"
version = "0.1.0"
description = ""
authors = ["grithaq <afifnurazizi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
exceptiongroup = "1.2.0"
iniconfig = "2.0.0"
packaging = "24.0"
pluggy = "1.4.0"
pytest = "8.1.1"
tomli = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
